Commit - Skapat getAllActivities() i ActivityService för att streama aktiviteters namn samt respektive value. Används för utskrift på aktivitetstabellen på fronten
- Lag ttill value för ActivityDTO så det stämmer med getAllActivities