@@ -3,7 +3,7 @@ package com.example.App.service;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 import org.springframework.stereotype.Service;
 
@@ -15,9 +15,8 @@ public class ActivityService {
 
     public List<ActivityDTO> getAllActivities() {
         return Arrays.stream(Activity.values())
-        .map(activity -> new ActivityDTO(activity.name()))
-        .collect(Collectors.toList());
+        .map(activity -> new ActivityDTO(activity.name(), activity.value))
+        .toList();
     }
-    
     
 }
